pre-commit: add end-of-file-fixer and trailing-whitespace hooks
  @ 00:05 hs

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,12 @@
--   repo: git://github.com/detailyang/pre-commit-shell
-    rev: v1.0.6
-    hooks:
-    -   id: shell-lint
-        exclude: test
+---
+
+repos:
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.3.0
+  hooks:
+  - id: end-of-file-fixer
+  - id: trailing-whitespace
+- repo: https://github.com/detailyang/pre-commit-shell
+  rev: v1.0.6
+  hooks:
+  - id: shell-lint
