--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ image: koalaman/shellcheck-alpine:stable
 
 before_script:
   - shellcheck --version
-  - apk update && apk add file grep
+  - apk update && apk add file grep make
 
 stages:
   - shellcheck
@@ -13,4 +13,4 @@ stages:
 shellcheck:
   stage: shellcheck
   script:
-    - file --mime-type * | grep shellscript | tr -d ':' | while read F _;do shellcheck $F;done
+    - make syntax-check
