gitlab-ci: get path and version of bash in before_script
  @ 00:03 hs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@
 image: koalaman/shellcheck-alpine:stable
 
 before_script:
+  - command -v bash
+  - bash --version
   - shellcheck --version
   - apk update && apk add file grep make
 
