gitlab-ci: install bash, before get path and version of bash
  @ 00:02 hs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,10 +4,10 @@
 image: koalaman/shellcheck-alpine:stable
 
 before_script:
+  - shellcheck --version
+  - apk update && apk add file grep make bash
   - command -v bash
   - bash --version
-  - shellcheck --version
-  - apk update && apk add file grep make
 
 stages:
   - shellcheck
